hierarchical models started

--- a/notes/univariate_gaussian/univariate_gaussian_estimation.tex
+++ b/notes/univariate_gaussian/univariate_gaussian_estimation.tex
@@ -131,5 +131,11 @@
     \caption{Comparing the log-posterior distributions of $\omega$ with uniform and Jeffreys prior.}
     \label{fig_log_post_uniform_jeffreys}
   \end{figure}
+  As we can see the resultng posterior distribution has spike near zero. Can
+  there be a probabilisitc explanation for this characterstic? Since we are
+  estimating the variance in the presence of noice, we have have to think in
+  terms of a hierarchical way.
+
+\subsection{Hierarchical modelling}
 
 \end{document}
